--- a/ac-front-end/package.json
+++ b/ac-front-end/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.3.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1123.0",
-    "i18next": "^21.8.1",
+    "bootstrap": "^5.1.0",
+    "i18next": "^21.8.2",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
+    "pdfjs-dist": "^2.13.216",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.16.9",
