--- a/ac-front-end/package.json
+++ b/ac-front-end/package.json
@@ -15,6 +15,7 @@
     "pdfjs-dist": "^2.13.216",
     "react": "^18.0.0",
     "react-bootstrap": "^2.0.0-rc.1",
+    "react-context": "^0.0.3",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.16.9",
