--- a/ac-front-end/package.json
+++ b/ac-front-end/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^4.2.21",
     "spinners-react": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
