--- a/ac-front-end/package.json
+++ b/ac-front-end/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.0",
     "react-tooltip": "^4.2.21",
     "spinners-react": "^1.0.7",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
