--- a/ac-front-end/package.json
+++ b/ac-front-end/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "amazon-connect-streams": "^2.1.1",
     "aws-sdk": "^2.1123.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.0",
     "i18next": "^21.8.2",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -21,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.3.1",
+    "react-media-recorder": "^1.6.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-tooltip": "^4.2.21",
