--- a/ac-front-end/package.json
+++ b/ac-front-end/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "amazon-connect-streams": "^2.1.1",
+    "aos": "^2.3.4",
     "aws-sdk": "^2.1123.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.0",
