--- a/ac-front-end/package.json
+++ b/ac-front-end/package.json
@@ -12,12 +12,14 @@
     "aws-sdk": "^2.1123.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.0",
+    "chart.js": "^3.8.0",
     "i18next": "^21.8.2",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
     "pdfjs-dist": "^2.13.216",
     "react": "^18.0.0",
     "react-bootstrap": "^2.0.0-rc.1",
+    "react-chartjs-2": "^4.1.0",
     "react-context": "^0.0.3",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
