--- a/ac-front-end/package.json
+++ b/ac-front-end/package.json
@@ -26,6 +26,7 @@
     "react-context": "^0.0.3",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.3.1",
     "react-media-recorder": "^1.6.6",
