fix errors in update
Co-Authored-By: Maikindustries <65171462+Maikindustries@users.noreply.github.com>
Co-Authored-By: Daniel García Barajas <77995765+DanielGB-Dev@users.noreply.github.com>

--- a/ac-front-end/.env
+++ b/ac-front-end/.env
@@ -1,4 +1,4 @@
 HTTPS=true
-SSL_CRT_FILE= localPem.pem 
+SSL_CRT_FILE= localPem.pem
 SSL_KEY_FILE= localPemKey.pem
-ENPOINT_BACK_END= https://backend.bankonnect.link/
+REACT_APP_ENDPOINT_BACK_END=https://backtest.bankonnect.link/
