--- a/ac-front-end/.env
+++ b/ac-front-end/.env
@@ -1,4 +1,4 @@
-HTTPS=true
+HTTPS=false
 SSL_CRT_FILE= localPem.pem
 SSL_KEY_FILE= localPemKey.pem
 REACT_APP_ENDPOINT_BACK_END=https://backend.bankonnect.link/
